overlays/dev/patch-dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springboot-app
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: springboot-app
