overlays/dev/patch-svc-dev.yaml
# overlays/dev/patch-svc-dev.yaml
apiVersion: v1
kind: Service
metadata:
  name: springboot-app
spec:
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30080
