overlays/dev/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: springboot-ingress
  namespace: dev
spec:
  rules:
  - host: dev.springboot.com    # dev specific host
